[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://BackgroundMusic.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://sound/full_ambience.ogg" type="AudioStream" id=4]
[ext_resource path="res://level/LevelGeometry.tscn" type="PackedScene" id=5]

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="OpeningBg" parent="." instance=ExtResource( 5 )]

[node name="Camera" type="Camera" parent="OpeningBg"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.82498, 0 )

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="BackgroundMusic" parent="." instance=ExtResource( 2 )]
pause_mode = 2

[node name="MusicAmbience" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -15.286
autoplay = true
mix_target = 1

[connection signal="new_game" from="MainMenu" to="." method="_on_MainMenu_new_game"]
[connection signal="resume_game" from="MainMenu" to="." method="_on_MainMenu_resume_game"]
